--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -132,7 +132,8 @@ $Panel__title
     flex 1 0 auto
     text-transform uppercase
     color $colorTitle
-    font-weight 500
+    //font-weight 500
+    font-size 1rem
     padding 0.5rem 0
 
 $Panel__menu
@@ -167,12 +168,12 @@ $NavActive
     background-color $colorDim
     pointer-events none
     color $colorHighlight
-    border-radius .2rem
-    box-shadow inset 0 0 1rem alpha($colorHighlight, 0.12)
+    border-radius .125rem
+    box-shadow inset 0 0 1rem alpha($colorHighlight, 0.06)
 
 $NavHover
     color $colorHighlight
-    border-radius .2rem
+    border-radius .125rem
     animation AnimHover .1s ease-in-out
     background-color $colorDim
 
