--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -112,7 +112,7 @@ $Panel__header
     display flex
     align-items center
     border-bottom 1px solid $colorDim
-    background-color alpha($colorDim, 0.1)
+    background-color alpha($colorDim, 0.06)
     border-top 1px solid $colorDim
 $Panel__decor
     position absolute
@@ -120,13 +120,13 @@ $Panel__decor
     width .25rem
     height .25rem
     transform rotate(45deg)
-    background-color $colorBase
+    background-color $colorHighlight
 $Panel__decor--long
     position absolute
     content ''
     width 2rem
     height 1px
-    background-color $colorBase
+    background-color $colorHighlight
 
 $Panel__title
     flex 1 0 auto
