--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -168,5 +168,11 @@ block content
                         rect.Sound1(x="18", y="0", width="1", height="16")
                         rect.Sound3(x="21", y="0", width="1", height="16")
                     .Button__label Audio On
-
-
+    .Loader
+        svg.Loader__spinner(viewBox="0 0 32 128", width="32", height="128")
+            rect.Loader01(x="0", y="0", width="1", height="128")
+            rect.Loader02(x="6", y="0", width="1", height="128")
+            rect.Loader03(x="12", y="0", width="1", height="128")
+            rect.Loader04(x="18", y="0", width="1", height="128")
+            rect.Loader05(x="24", y="0", width="1", height="128")
+            rect.Loader06(x="30", y="0", width="1", height="128")
