Added graphs using d3

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -499,6 +499,19 @@ p:first-line
 .Graph__legendLabel
     font-size .875rem
 
+.Graph__area
+    fill $colorBase
+
+.Graph__line
+    stroke $colorBase
+    stroke-width 1px
+
+.Graph__axis
+    fill none
+    stroke $colorBase
+    shape-rendering crispEdges
+
+
 // ----------------------------------------------------------
 // Graph
 
