--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -494,6 +494,8 @@ p:first-line
 
 .Graph__content
     flex 1
+    margin-bottom 2rem
+    border 1px solid $colorDim
 
 .Graph__legends
     flex 0 0 2rem
