--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -265,7 +265,7 @@ p:first-line
     width 100%
     height 100%
     background-color black
-    border 1px solid $colorDim
+    //border 1px solid $colorDim
 .Sun__date
     position absolute
     right 0
@@ -496,7 +496,7 @@ p:first-line
 .Graph__content
     flex 1
     position relative
-    margin-bottom 2rem
+    margin 1rem 0 2rem
 
 .Graph__legends
     flex 0 0 2rem
