--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -50,7 +50,7 @@ block content
                         +loader("#sun")
                         .Sun
                             .Sun__container
-                                img.Sun__image(src="images/giphy.gif")
+                                img.Sun__image(src="images/304_2015-12-16-02-00.gif")
                     .Panel__footer
                         .Timeline
                             .Timeline__progress
