--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -117,7 +117,7 @@ block content
                             a.Panel__menuItem(href="/forecast",data-param-name="type",data-param-value="radio-blackout") Radio Blackout Activity
                     .Panel__content
                         h2 Graphs
-                        +loader("#forecast")
+                        +loader("#forecast-graphs")
                         .Graph
                             .Graph__content
                     .Panel__footer
@@ -125,16 +125,8 @@ block content
                     .Panel__header
                         .Panel__title Alerts
                     .Panel__content
+                        +loader("#forecast-alerts")
                         .Alerts
-                            .Alert
-                                input.Alert__input(type="checkbox", id="alert-001")
-                                label.Alert__basicInfo(for="alert-001")
-                                    .Alert__metadata
-                                        .Alert__issueTime 2015 Dec 15 0338 UTC
-                                        .Alert__SWMC WARK04
-                                    .Alert__message Geomagnetic K-index of 4 expected
-                                .Alert__extendedInfo
-                                    .Alert__payload Extension to Serial Number: 2736\r\nValid From: 2015 Dec 09 2005 UTC\r\nNow Valid Until: 2015 Dec 12 0400 UTC\r\nWarning Condition: Persistence\r\nwww.swpc.noaa.gov/noaa-scales-explanation\r\nPotential Impacts: Area of impact primarily poleward of 65 degrees Geomagnetic Latitude.\r\nInduced Currents - Weak power grid fluctuations can occur.\r\nAurora - Aurora may be visible at high latitudes such as Canada and Alaska.
                             .Alert.Alert--warning
                                 input.Alert__input(type="checkbox", id="alert-002")
                                 label.Alert__basicInfo(for="alert-002")
@@ -186,3 +178,13 @@ block content
                         rect.Sound3(x="21", y="0", width="1", height="16")
                     .Button__label Audio On
     +loader("main")
+    template#alert
+        .Alert(class="{alerttype}")
+            input.Alert__input(type="checkbox", id="{id}")
+            label.Alert__basicInfo(for="{id}")
+                .Alert__metadata
+                    .Alert__issueTime {issuetime}
+                    .Alert__SWMC {SWMC}
+                .Alert__message {message}
+            .Alert__extendedInfo
+                .Alert__payload {payload}
