--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -121,12 +121,14 @@ $Panel__decor
     height .25rem
     transform rotate(45deg)
     background-color $colorHighlight
+    z-index 101
 $Panel__decor--long
     position absolute
     content ''
     width 2rem
     height 1px
     background-color $colorHighlight
+    z-index 101
 
 $Panel__title
     flex 1 0 auto
