--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -262,8 +262,8 @@ p:first-line
     width 100%
     //height 100%
 .Sun__container
-    width 100%
-    height 100%
+    margin auto
+    position relative
     background-color black
     //border 1px solid $colorDim
 .Sun__date
@@ -272,11 +272,27 @@ p:first-line
     font-size 1.25rem
     bottom 1rem
     color $colorBase
+.Sun__vignette
+    display inline-block
+    position relative
+    margin auto
 .Sun__image
+    position relative
     display block
     margin auto
     max-width 100%
     max-height 100%
+    border-radius 50%
+.Sun__container:after
+    content ''
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+    border-radius 50%
+    box-shadow inset 0 0 6rem 2rem black
+    z-index 10
 
 // ----------------------------------------------------------
 // Timeline
