--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -127,22 +127,94 @@ block content
                         // +loader("#forecast")
                         .Forecast__days
                             .Forecast__day
-                                .Forecast_energyBars
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
+                                .EnergyBars
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 99
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 1
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 80
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 20
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 90
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 10
+                                            .EnergyBar__line--low
+                                            - i ++
                                 .Forecast__dayLabel Dec 26
                             .Forecast__day
-                                .Forecast_energyBars
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
+                                .EnergyBars
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 99
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 1
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 80
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 20
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 90
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 10
+                                            .EnergyBar__line--low
+                                            - i ++
                                 .Forecast__dayLabel Dec 27
                             .Forecast__day
-                                .Forecast_energyBars
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
-                                    .Forecast_energyBar
+                                .EnergyBars
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 99
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 1
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 80
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 20
+                                            .EnergyBar__line--low
+                                            - i ++
+                                    .EnergyBar
+                                        - var i = 0
+                                        while i < 90
+                                            .EnergyBar__line
+                                            - i ++
+                                        - var i = 0
+                                        while i < 10
+                                            .EnergyBar__line--low
+                                            - i ++
                                 .Forecast__dayLabel Dec 28
                     .Panel__footer
                 .Forecast__alerts
