Added sunspots graph

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -90,6 +90,9 @@ block content
                         .Panel__title Sunspots
                     .Panel__content
                         h2 Graph
+                        +loader("#sunspots")
+                        .Graph
+                            .Graph__content
                     .Panel__footer
                 .Sunspots__description
                     .Text__header Lorem ipsum dolor sit amet
